# Auto

./: .gitignore  CHECK_LIST.md  PUBLISHING.md  README.md  build_binary.py  pyproject.toml  spreado-gui.spec
.claude/: CLAUDE.md
config/: ai_settings.json
docs/: core_flow.md  guide.md  login_flow.md
reports/: douyin-publish-error-20260605T155743.txt  douyin-publish-unconfirmed-20260605T120100.txt  douyin-publish-unconfirmed-20260605T121038.txt  douyin-publish-unconfirmed-20260605T121308.txt  e2e-check-20260502T124620.md  e2e-check-20260502T125338.md  e2e-check-20260503T141817.md  e2e-check-20260504T142752.md  e2e-check-20260505T140411.md  e2e-check-20260506T141834.md  e2e-check-20260507T142439.md  e2e-check-20260508T134157.md  e2e-check-20260509T140629.md  e2e-check-20260510T142522.md  e2e-check-20260511T145850.md  e2e-check-20260512T142714.md  e2e-check-20260513T144013.md  e2e-check-20260514T143926.md  e2e-check-20260515T144815.md  e2e-check-20260516T141326.md  e2e-check-20260517T143532.md  e2e-check-20260518T151059.md  e2e-check-20260519T150223.md  e2e-check-20260520T150250.md  e2e-check-20260521T150732.md  e2e-check-20260522T150242.md  e2e-check-20260523T142444.md  e2e-check-20260524T145227.md  e2e-check-20260525T160317.md  e2e-check-20260526T150135.md  e2e-check-20260527T151934.md  e2e-check-20260528T150836.md  e2e-check-20260529T150911.md  e2e-check-20260530T143606.md  e2e-check-20260531T151133.md  e2e-check-20260601T165053.md  e2e-check-20260602T161237.md  e2e-check-20260603T163426.md  e2e-check-20260604T160538.md  e2e-check-20260604T180230.md  (+141 more)
scripts/: e2e_test.py  (+1 more)
(+45 files in other folders)
